kustomization/shared/helloworld/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: helloworld
